@@ -1,6 +1,9 @@
 Changes between 2.3.4 and 2.3.5dev
 -----------------------------------
 
+- Issue 265 - integrate nose setup/teardown with setupstate
+  so it doesnt try to teardown if it did not setup
+
 - issue 271 - dont write junitxml on slave nodes
 
 - Issue 274 - dont try to show full doctest example
